--- a/index.html
+++ b/index.html
@@ -6,5 +6,25 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
+    <a href="http://www.dictionary.com/browse/excursion">Download Excursion (Coming Soon!)</a>
+  <div id="video1">
+    <video autoplay muted loop>
+  <source src="resources/videos/excursion.mp4" type="video/mp4"></video>
+    </video>
+  </div>
+  <div id ="travel">
+    <h3>Your personal travel guide</h3>
+    <p>Excursion remembers places you like, and recommends
+      new points of interest around you."</p>
+    <img src="resources/images/camp.jpg" />
+  </div>
+  <div id="phone">
+    <img src="resources/images/phone.png" />
+    <h2>Coming Soon for iPhone and Android</h2>
+    <a href="http://www.dictionary.com/browse/excursion">Download Excursion (Coming Soon!)</a>
+  </div>
+  <footer>
+    <p>&copy;Excursion</p>
+  </footer>
   </body>
 </html>
