--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div id ="travel">
     <h3>Your personal travel guide</h3>
     <p>Excursion remembers places you like, and recommends
-      new points of interest around you."</p>
+      new points of interest around you.</p>
     <img src="resources/images/camp.jpg" />
   </div>
   <div id="phone">
